<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asterisk Manager</string>
    <string name="server_asterisk">Server Asterisk</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="_0_0_0_0">0.0.0.0</string>
    <string name="_5038">5038</string>
    <string name="ami_user">AMI User</string>
    <string name="user_name">user name</string>
    <string name="user_secret">user secret</string>
    <string name="asterisk_context">Asterisk Context</string>
    <string name="from_internal">from-internal</string>
    <string name="my_phone_number">My Phone Number</string>
    <string name="enter_you_phone_number">enter you phone number</string>
    <string name="save">SAVE</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="test">Test</string>
    <string name="editAsterServer">Edit Asterisk Server</string>
    <string name="titleAddNewServer">Add  Asterisk Server</string>
    <string name="failureIP">Input IP</string>
    <string name="failurePORT">Input Port</string>
    <string name="failureUSERNAME">Input username</string>
    <string name="failureSECRET">Input secret</string>
    <string name="titleAddServer">Add Asterisk</string>
    <string name="settings">Settings</string>
    <string name="SUCCESS">SUCCESS</string>
    <string name="FAILURE">FAILURE</string>
    <string name="enter_you_server_name">Server Name</string>
    <string name="enter_name">MyAsterisk</string>
    <string name="server_name">Server Name</string>
    <string name="deleteserver">Delete</string>
    <string name="connectionSettings">Connection settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirmdeletion">Confirm deletion</string>
    <string name="areyousure">Are you sure you want to delete this?</string>
    <string name="exit">EXIT</string>
    <string-array name="ConfigFile">
        <item>asterisk.conf</item>
        <item>adtranvofr.conf</item>
        <item>agents.conf</item>
        <item>gtalk.conf</item>
        <item>h323.conf</item>
        <item>iax.conf</item>
        <item>jabber.conf</item>
        <item>jingle.conf</item>
        <item>mgcp.conf</item>
        <item>modem.conf</item>
        <item>phone.conf</item>
        <item>sip.conf</item>
        <item>skinny.conf</item>
        <item>vpb.conf</item>
        <item>zapata.conf</item>
        <item>adsi.conf</item>
        <item>asterisk.adsi</item>
        <item>telcordia-1.adsi</item>
        <item>extensions.conf</item>
        <item>extensions.ael</item>
        <item>features.conf</item>
        <item>extconfig.conf</item>
        <item>alarmreceiver.conf</item>
        <item>enum.conf</item>
        <item>dundi.conf</item>
        <item>festival.conf</item>
        <item>indications.conf</item>
        <item>meetme.conf</item>
        <item>musiconhold.conf</item>
        <item>queues.conf</item>
        <item>voicemail.conf</item>
        <item>amd.conf</item>
        <item>alsa.conf</item>
        <item>cdr_odbc.conf</item>
        <item>cdr_pgsql.conf</item>
        <item>codecs.conf</item>
        <item>features.conf</item>
        <item>followme.conf</item>
        <item>func_odbc.conf</item>
        <item>http.conf</item>
        <item>logger.conf</item>
        <item>manager.conf</item>
        <item>modules.conf</item>
        <item>odbc.conf</item>
        <item>oss.conf</item>
        <item>privacy.conf</item>
        <item>res_snmp.conf</item>
        <item>rpt.conf</item>
        <item>rtp.conf</item>
        <item>say.conf</item>
        <item>sla.conf</item>
        <item>smdi.conf</item>
        <item>udptl.conf</item>
    </string-array>
    <string-array name="ConfigFileDescription">
        <item>asterisk.conf</item>
        <item>adtranvofr.conf</item>
        <item>agents.conf</item>
        <item>gtalk.conf</item>
        <item>h323.conf</item>
        <item>iax.conf</item>
        <item>jabber.conf</item>
        <item>jingle.conf</item>
        <item>mgcp.conf</item>
        <item>modem.conf</item>
        <item>phone.conf</item>
        <item>sip.conf</item>
        <item>skinny.conf</item>
        <item>vpb.conf</item>
        <item>zapata.conf</item>
        <item>adsi.conf</item>
        <item>asterisk.adsi</item>
        <item>telcordia-1.adsi</item>
        <item>extensions.conf</item>
        <item>extensions.ael</item>
        <item>features.conf</item>
        <item>extconfig.conf</item>
        <item>alarmreceiver.conf</item>
        <item>enum.conf</item>
        <item>dundi.conf</item>
        <item>festival.conf</item>
        <item>indications.conf</item>
        <item>meetme.conf</item>
        <item>musiconhold.conf</item>
        <item>queues.conf</item>
        <item>voicemail.conf</item>
        <item>amd.conf</item>
        <item>alsa.conf</item>
        <item>cdr_odbc.conf</item>
        <item>cdr_pgsql.conf</item>
        <item>codecs.conf</item>
        <item>features.conf</item>
        <item>followme.conf</item>
        <item>func_odbc.conf</item>
        <item>http.conf</item>
        <item>logger.conf</item>
        <item>manager.conf</item>
        <item>modules.conf</item>
        <item>odbc.conf</item>
        <item>oss.conf</item>
        <item>privacy.conf</item>
        <item>res_snmp.conf</item>
        <item>rpt.conf</item>
        <item>rtp.conf</item>
        <item>say.conf</item>
        <item>sla.conf</item>
        <item>smdi.conf</item>
        <item>udptl.conf</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

    <string name="todo">TODO</string>

    <string name="cli_command">CLI COMMAND</string>
    <string name="send">SEND</string>
    <string name="sip_show_peers">sip show peers</string>
    <string name="write_timeout">Write Timeout:</string>
    <string name="permit">Permit:</string>
    <string name="deny">Deny:</string>
    <string name="manager_secret">Manager Secret:</string>
    <string name="manager_name">Manager Name:</string>
    <string name="name">Name</string>
    <string name="Read">Read:</string>
    <string name="write">Write:</string>
    <string name="item">Item</string>

</resources>